feat: Add `GET /documents/{id}/status`
This returns just the ingestion status information. The intention is to
use this for cases where a client wants to wait for ingestion, since it
won't include the full document-text, etc.
