# dewy/document/router.py
@@ -8,7 +8,7 @@ from dewy.common.collection_embeddings import CollectionEmbeddings
 from dewy.common.db import PgConnectionDep, PgPoolDep
 from dewy.document.models import Document
 
-from .models import AddDocumentRequest
+from .models import AddDocumentRequest, DocumentStatus, IngestState
 
 router = APIRouter(prefix="/documents")
 
@@ -125,3 +125,19 @@ async def get_document(conn: PgConnectionDep, id: PathDocumentId) -> Document:
         id,
     )
     return Document.model_validate(dict(result))
+
+@router.get("/{id}/status")
+async def get_document_status(conn: PgConnectionDep, id: PathDocumentId) -> DocumentStatus:
+    result = await conn.fetchrow(
+        """
+        SELECT ingest_state, ingest_error
+        FROM document
+        WHERE id = $1
+        """,
+        id
+    )
+    return DocumentStatus(
+        id=id,
+        ingest_state = result["ingest_state"],
+        ingest_error = result["ingest_error"]
+    )
